Implement food item update dialog & clean up formatting methods